--- a/gb/17/2/17/n8819978.md
+++ b/gb/17/2/17/n8819978.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/onzhi266/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>曹禺——从“戏剧天才”到“精神残废”</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2017年02月17日讯】这是一个真实的故事。不仅拍成了电影，而且隐晦、深重的灾难情节延伸到了被中共涂炭的无数生灵。</p>
+	<p>【大纪元2017年02月17日讯】这是一个真实的故事。不仅拍成了电影，而且隐晦、深重的灾难情节延伸到了被中共涂炭的无数生灵。</p>
 <p>夫妻俩曾相濡以沫，感情笃深。丈夫被纳粹关进集中营多年后失忆，最终获释回到家里。妻子使用各种办法想唤起丈夫的记忆：播放熟悉的音乐、跳起浪漫的舞曲……经过长时间的精心护理，丈夫似乎也有一些转机，幽暗的生活开始照进一丝光明。</p>
 <p>可有一天，丈夫突然向屋外跑去。情急之下，妻子厉声大喊：“站住！”结果，狂奔中的丈夫猛地停住；然后，慢慢将自己孱弱的双手怏怏举起，做出投降和就范的姿势。那个瞬间，丈夫仿佛又回到了集中营。</p>
-<p>这是法国电影《长相思》中的镜头。影片中“丈夫”的表现宛如中国剧作家<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%9B%B9%E7%A6%BA.md#1">曹禺</a>的晚年写真：一朝心灵蒙难，一生难以治愈。</p>
+<p>这是法国电影《长相思》中的镜头。影片中“丈夫”的表现宛如中国剧作家<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9B%B9%E7%A6%BA.md#1">曹禺</a>的晚年写真：一朝心灵蒙难，一生难以治愈。</p>
 <h3><strong>“诛心”伤痛</strong></h3>
-<p><ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%9B%B9%E7%A6%BA.md#1">曹禺</a>1910年生于天津官宦家庭，原名万家宝，幼年的他常被继母带去看戏曲和文明戏。曹禺是他用来写作剧本的笔名，取自他姓氏正体“万”字，拆为“草字头”和“禺”，草字头换为曹，“万”就成了“曹禺”。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9B%B9%E7%A6%BA.md#1">曹禺</a>1910年生于天津官宦家庭，原名万家宝，幼年的他常被继母带去看戏曲和文明戏。曹禺是他用来写作剧本的笔名，取自他姓氏正体“万”字，拆为“草字头”和“禺”，草字头换为曹，“万”就成了“曹禺”。</p>
 <p>如今，在他天津的祖宅里，还有一面墙上挂着几十幅表情生动、飞扬夸张的照片。那是少年万家宝看戏归来，一个人对着镜子反复表演的脸谱汇集：高兴、愤怒、甜蜜、遐想、鄙视……这为他日后演戏和写戏都埋下了深深的种子。</p>
 <p>一晃百年过去。2010年，在曹禺诞辰100周年纪念日，他生前所在的“北京人艺”重排演出了他的四大剧——《雷雨》、《日出》、《北京人》和《原野》。</p>
-<figure id="attachment_8822147" style="width: 300px" class="wp-caption aligncenter"><img class="wp-image-8822147 size-full" src="https://i.epochtimes.com/assets/uploads/2017/02/3.gif" alt="晚年的曹禺。（网络图片）" width="300" b="310" /><figcaption class="wp-caption-text">晚年的曹禺（网络图片）</figcaption></figure>
-<p>与此同时，中国现代文学史上典型的“曹禺现象”也被重新提起：这位23岁就写出《雷雨》的“<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%88%8F%E5%89%A7%E5%A4%A9%E6%89%8D.md#1">戏剧天才</a>”，在39岁之后到1996年他去世的47年间，就再没能写出一部令他自己和观众满意的作品。</p>
+<figure id="attachment_8822147" aria-describedby="caption-attachment-8822147" style="width: 300px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/02/3.gif" target="_blank" rel="noreferrer noopener"> <img class="wp-image-8822147 size-full" src="https://i.epochtimes.com/assets/uploads/2017/02/3.gif" alt="晚年的曹禺。（网络图片）" width="300" b="310" /></a><figcaption id="caption-attachment-8822147" class="wp-caption-text">晚年的曹禺（网络图片）</figcaption></figure>
+<p>与此同时，中国现代文学史上典型的“曹禺现象”也被重新提起：这位23岁就写出《雷雨》的“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%88%8F%E5%89%A7%E5%A4%A9%E6%89%8D.md#1">戏剧天才</a>”，在39岁之后到1996年他去世的47年间，就再没能写出一部令他自己和观众满意的作品。</p>
 <p>1940年，中共开始了“延安整风”，对知识分子的“诛身” “诛心”运动山雨欲来；1942年，毛泽东发表《在延安文艺座谈会上的讲话》，敢讲真话的王实味等作家就遭受残酷的杀害。</p>
 <p>而比“诛身”更可怕的是，中共对受蒙骗奔赴延安的所有作家祭出杀手锏：统一用工农兵的大白话创作。而天真浪漫的作家们岂能预测，毛泽东的这一暴力洗脑方式，是为了将工农的知识匮乏转化为革命的动力，为日后的窃国做准备。</p>
 <p>曹禺自幼家学修养深厚，练就的是古朴典雅、含蓄蕴藉的语言风格。延安时期，尽管他经受了无数的洗脑，但他的笔下怎么都流不出通俗的文字。</p>
@@ -24,10 +24,10 @@
 <p>除去“文革”十年空白，在三十多年的时间里，曹禺成形的作品只有两部半，而且是应景式的创作，其中一部是《明朗的天》。为了写作这个剧本，他到协和医院体验生活，和众多的医生接触，可是还是不了解知识分子错在哪里、为什么要改造。</p>
 <p>他写完后感到荒诞：“我也是个未改造好的知识分子，怎么写别的知识分子改造好了？实在是捉摸不透。”</p>
 <p>他在“文革”期间被迫写过一些表态文章。每每过不了关，不得不从《红旗》杂志上抄口号，把自己骂得不是人才算过场，但回到家里难受得直抽自己嘴巴。</p>
-<p>经过“文革”十年浩劫，晚年的曹禺犹如断臂之人。一切都明白了，但人却残废了，用他自己的话说是“<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E7%B2%BE%E7%A5%9E%E6%AE%8B%E5%BA%9F.md#1">精神残废</a>”了。那种渴望自由、渴望创造的热情，无论如何再也没能燃烧起来。</p>
+<p>经过“文革”十年浩劫，晚年的曹禺犹如断臂之人。一切都明白了，但人却残废了，用他自己的话说是“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%B2%BE%E7%A5%9E%E6%AE%8B%E5%BA%9F.md#1">精神残废</a>”了。那种渴望自由、渴望创造的热情，无论如何再也没能燃烧起来。</p>
 <p>他的女儿万方曾表示：“我父亲被扭曲了。一直到死，他都没能真正恢复到他写《雷雨》时那个自由自在的灵魂。”不能不写的渴望与不能写出的矛盾，成为曹禺晚年最大的痛苦。</p>
 <p>从23岁到33岁的十年间，曹禺写出了包括《雷雨》在内的可以传世的七部戏。但1949年之后的47年里，只写了两部半歌功颂德的戏，因为有一部还是与另一人合写。而这几部作品现在已无人提起，曹禺晚年自己也很少提及。</p>
-<figure id="attachment_8822191" style="width: 300px" class="wp-caption aligncenter"><img class="wp-image-8822191 size-small" src="https://i.epochtimes.com/assets/uploads/2017/02/9-8-300x457.jpg" alt="曹禺的《雷雨》被誉为中国的“百年一戏”。（网络图片）" width="300" b="457" /><figcaption class="wp-caption-text">曹禺的《雷雨》被誉为中国的“百年一戏”。（网络图片）</figcaption></figure>
+<figure id="attachment_8822191" aria-describedby="caption-attachment-8822191" style="width: 300px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/02/9-8-300x457.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-8822191 size-small" src="https://i.epochtimes.com/assets/uploads/2017/02/9-8-300x457.jpg" alt="曹禺的《雷雨》被誉为中国的“百年一戏”。（网络图片）" width="300" b="457" /></a><figcaption id="caption-attachment-8822191" class="wp-caption-text">曹禺的《雷雨》被誉为中国的“百年一戏”。（网络图片）</figcaption></figure>
 <p>1983年春天，美国剧作家阿瑟?米勒应邀访华，到曹禺家做客。吃饭时，曹禺拿出好友、画家黄永玉写来的信念给米勒听。</p>
 <p>黄永玉在信中对曹禺说：“我不喜欢你1949年以后的戏，一个也不喜欢。你心不在戏里，你失去了伟大的灵通宝玉，你为势位所误！从一个海洋萎缩为一条小溪流，你泥溷在不情愿的艺术创作中。”</p>
 <p>晚年的曹禺身兼中共文联代主席和“北京人艺”的院长，每天忙于各种社会事务的应酬。他的女儿万方记得，有天夜里她突然听到睡在隔壁房间的父亲大喊：“我想从窗户跳下去！我这样活着有什么意义！每天用嘴活着！”“我痛苦，我要写一个大东西才死，不然我不干！”</p>
@@ -35,13 +35,13 @@
 <p>万方说，她亲眼看到父亲的晚年被一种痛苦持续不断地困扰，他想重新获得写《雷雨》时候的力量，但是他已经不是他，已经回不到原来的那个曹禺了。</p>
 <p>1996年，长期住院的曹禺经受身心的双重折磨后离世。在北京医院的2848天里，他始终想着创作，枕边一直放着几个本子。他写断想，写诗，写日记，写人物对话，还有剧本提纲。他天天写，但从来都只是个开头。</p>
 <p>也是在仅仅开了个头的一份文稿中，他留下了最后的一行文字：“我整天担心随时被抓进去……”</p>
-<h3><strong><ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%88%8F%E5%89%A7%E5%A4%A9%E6%89%8D.md#1">戏剧天才</a></strong></h3>
+<h3><strong><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%88%8F%E5%89%A7%E5%A4%A9%E6%89%8D.md#1">戏剧天才</a></strong></h3>
 <p>曹禺的生命虽然随风飘去，但历史有情，它记住了像曹禺这样的名人。</p>
 <p>1933年暑假，清华大学的图书馆显得有些冷清。外文阅览室里，一个戴眼镜的斯文男生，每天准点光顾，奋笔疾书，摊在他案头的四幕话剧就是《雷雨》。</p>
 <p>这部作品，是当时就读于清华大学西文系、年仅23岁的曹禺构思近五年、五易其稿的结晶。他写成后将剧本交给了《文学季刊》编辑、中学同窗好友靳以。但由于靳以人很正直，为了避嫌，迟迟未将这部优秀的剧作推荐给主编郑振铎。</p>
 <p>1934年7月，同在《文学季刊》担任组稿编辑的巴金辗转获得了这部作品：扣人心弦的情节，简练含蓄的语言，各具特色的人物，极为丰富的潜台词，他一口气读完后被深深打动，立即向主编推荐，破例用整期杂志全文刊登。</p>
 <p>随后，《雷雨》被搬上舞台。1935年8月，《雷雨》在天津举行大陆的首次公演，立即引起轰动；1936年，上海剧团不仅演出《雷雨》，而且每一种戏曲，无论申曲、越剧或文明戏，都演出了这一剧目；迄今，《雷雨》不仅在中国而且在世界各地，被一代又一代人表演了近一个世纪，也被改编成电影、电视等各种艺术形式。</p>
-<figure id="attachment_8822157" style="width: 300px" class="wp-caption aligncenter"><img class="size-small wp-image-8822157" src="https://i.epochtimes.com/assets/uploads/2017/02/4-27-300x227.jpg" alt="青年时代的曹禺。（网络图片）" width="300" b="227" /><figcaption class="wp-caption-text">青年时代的曹禺。（网络图片）</figcaption></figure>
+<figure id="attachment_8822157" aria-describedby="caption-attachment-8822157" style="width: 300px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/02/4-27-300x227.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-small wp-image-8822157" src="https://i.epochtimes.com/assets/uploads/2017/02/4-27-300x227.jpg" alt="青年时代的曹禺。（网络图片）" width="300" b="227" /></a><figcaption id="caption-attachment-8822157" class="wp-caption-text">青年时代的曹禺。（网络图片）</figcaption></figure>
 <p>曹禺一夜成名。等到1936年他的新作《日出》发表时，由萧乾主持，天津《大公报》副刊邀请了当时文坛上几乎所有文学大家进行了两次集体讨论，盛况空前。</p>
 <p>同年，应校长余上沅的邀请，曹禺受聘为南京国立戏剧专科学校教授，后担任教务主任。大批学生慕其名而报考该校，此时曹禺年方26岁。</p>
 <p>年轻的曹禺成为中国戏剧界的“天才”，当时有作家为他写下“一时海上惊雷雨”的赞诗，《雷雨》迄今还是中国文坛无可超越的“百年一戏”。</p>
@@ -58,7 +58,7 @@
 <p>被带走之后，他被关在牛棚里劳动改造。每天扫大街、清厕所、被批斗。军宣队要求他写认罪检查书， “写得好”才能过关，但经常是修改了七八次，仍不能通过。</p>
 <p>他坐在房间里通铺前的小马扎上，两只眼睛直勾勾地望着白色的墙壁，手里拿着纸和笔，唉声叹气，一个字都写不出来。他突然喊：“我就是孙子！也不是孙子，就是一条虫，随他们怎么碾！”</p>
 <p>多年后，曹禺对采访他的记者说：“他们逼着你招供，供了以后不但别人相信，甚至连你自己也相信。觉得自己是个大坏蛋，不能生存于这个世界……这种思想上的折磨比打死人还厉害。”</p>
-<figure id="attachment_8822176" style="width: 300px" class="wp-caption aligncenter"><img class="wp-image-8822176 size-small" src="https://i.epochtimes.com/assets/uploads/2017/02/8-9-300x201.jpg" alt="不能不写的渴望与不能写出的矛盾，成为曹禺晚年最大的痛苦。图为曹禺与女儿万方合照。（网络图片）" width="300" b="201" /><figcaption class="wp-caption-text">不能不写的渴望与不能写出的矛盾，成为曹禺晚年最大的痛苦。图为曹禺与女儿万方合照。（网络图片）</figcaption></figure>
+<figure id="attachment_8822176" aria-describedby="caption-attachment-8822176" style="width: 300px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/02/8-9-300x201.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-8822176 size-small" src="https://i.epochtimes.com/assets/uploads/2017/02/8-9-300x201.jpg" alt="不能不写的渴望与不能写出的矛盾，成为曹禺晚年最大的痛苦。图为曹禺与女儿万方合照。（网络图片）" width="300" b="201" /></a><figcaption id="caption-attachment-8822176" class="wp-caption-text">不能不写的渴望与不能写出的矛盾，成为曹禺晚年最大的痛苦。图为曹禺与女儿万方合照。（网络图片）</figcaption></figure>
 <p>他曾经很羡慕在胡同里遇见的一个扫地的老太太，可以苟全性命。他说：“我羡慕那一字不识的人，没有一点文化的人，他们真幸福。他们仍然能过着人的生活，没有被辱骂、被抄家、被夺去一切做人应有的自由和权利。”</p>
 <p>“文革”结束后，曹禺已是年近七旬的老人。恢复职务和地位的他，晚年社会事务极为繁忙，电话天天响，要他开会、题字、看戏、评奖等等，他什么都应承。有时候一天安排四个活动，包括接机、追悼会、接见外国代表团等。</p>
 <p>每次参加活动回到家，他都倒在沙发上，像被抽空了似的。他对家人说：“一天到晚瞎敷衍，说点这个，说点那个，就是浑蛋呗！没法子。”有说不出的沮丧。</p>
@@ -73,50 +73,46 @@
 <p>…………</p>
 <p>曹禺不过是中共治下所有作家的写照。万马齐喑的时代，让沈从文、钱钟书、巴金、老舍等曾经的文坛大家都患上了“集体失语症”，这是一代作家甚至是一代人共有的劫难。＃</p>
 <p>责任编辑：张宪义</p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/11/11/26/n3441171.md#1">佟新：曹禺的创作从7：10到3：47昭示了什么？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/8/7/12/n2189047.md#1">曹禺夫人李玉茹病逝</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/6/5/26/n1331129.md#1">剧作家曹禺女儿万方抵台推荐雷雨具震撼力</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/6/4/25/n1298328.md#1">曹禺3剧作5月起将以电视舞台剧等方式呈现</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/3/4/15/n300607.md#1">【纪元专栏】 张耀杰：政治风浪中的曹禺与吴祖光</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/3/4/14/n300244.md#1">【纪元专栏】张耀杰：吴祖光与曹禺的文坛恩怨（1）</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/2/3/15/n176948.md#1">【纪元专栏】张耀杰: 曹禺笔下的农民暴动</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/1/5/19/n90178.md#1">张耀杰：周恩来与曹禺的公私交往</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/1/5/19/n90178.md#1">张耀杰：周恩来与曹禺的公私交往</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/2/3/15/n176948.md#1">【纪元专栏】张耀杰: 曹禺笔下的农民暴动</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/3/4/14/n300244.md#1">【纪元专栏】张耀杰：吴祖光与曹禺的文坛恩怨（1）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/3/4/15/n300607.md#1">【纪元专栏】 张耀杰：政治风浪中的曹禺与吴祖光</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/16/7/14/n8099263.md#1">张东园：中共迫害文化精英实录（二）</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/1/31/n8762539.md#1">三百年一见的国学大师陈寅恪之死</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/23/n11539563.md#1" target="_blank">鸿路：最后的双十节</a></li><li><a href="https://github.com/onzhi266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/27/n9325401.md#1" target="_blank">林展翔：迫害法轮功责任人入美将面临制裁</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/13/n10138788.md#1" target="_blank">中共进入联合国与尼克松访华内幕（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/25/n10932219.md#1" target="_blank">褒奖法轮功 推崇普世价值</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/2/n11909596.md#1">【命理】什么样的女子能够旺夫？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948158.md#1">【现场视频】湖北襄阳菜农夜色中卖菜</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947678.md#1">【现场视频】武汉江岸区又有人跳楼</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/2/17/n8819978.htm">曹禺——从“戏剧天才”到“精神残废”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/2/17/n8819978.htm">曹禺——从“戏剧天才”到“精神残废”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/onzhi266/djy/blob/master/gb/17/2/17/n8819978.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/17/2/17/n8819978.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
